# src/middleware/models/middlewareManager.ts
@@ -5,7 +5,7 @@ import httpStatus from 'http-status-codes';
 import { StoreTriggerCall } from '../../externalServices/storeTrigger/requestCall';
 import { StoreTriggerPayload, StoreTriggerResponse } from '../../externalServices/storeTrigger/interfaces';
 import { SERVICES } from '../../common/constants';
-import { IngestionPayload, UpdatePayload } from '../../common/interfaces';
+import { IngestionPayload, UpdatePayload, UpdateStatusPayload } from '../../common/interfaces';
 import { ValidationManager } from '../../validator/validationManager';
 import { AppError } from '../../common/appError';
 import { CatalogCall } from '../../externalServices/catalog/requestCall';
@@ -82,6 +82,31 @@ export class MiddlewareManager {
     }
     try {
       const response = await this.catalog.patchMetadata(identifier, payload);
+      return response;
+    } catch (error) {
+      this.logger.error({ msg: 'Error while sending to catalog service', modelId: identifier, error, payload });
+      throw new AppError('catalog', httpStatus.INTERNAL_SERVER_ERROR, 'there is an error with catalog', true);
+    }
+  }
+
+  public async updateStatus(identifier: string, payload: UpdateStatusPayload): Promise<unknown> {
+    this.logger.info({ msg: 'started update of metadata', modelId: identifier, payload });
+    this.logger.debug({ msg: 'starting validating the payload', modelId: identifier });
+    try {
+      const validated: boolean | string = await this.validator.validateRecordExistence(identifier);
+      if (typeof validated == 'string') {
+        throw new AppError('badRequest', httpStatus.BAD_REQUEST, validated, true);
+      }
+      this.logger.info({ msg: 'model validated successfully', modelId: identifier });
+    } catch (error) {
+      if (error instanceof AppError) {
+        throw error;
+      }
+      this.logger.error({ msg: 'unfamiliar error', error });
+      throw new AppError('error', httpStatus.INTERNAL_SERVER_ERROR, String(error), true);
+    }
+    try {
+      const response = await this.catalog.changeStatus(identifier, payload);
       return response;
     } catch (error) {
       this.logger.error({ msg: 'Error while sending to catalog service', modelId: identifier, error, payload });
